syntax = "proto3";

package tableUser;

option go_package = "github.com/GarotoCowboy/vttProject/api/grpc/pb/tableUser;tableUser";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service TableUserService{
  rpc PromoteOrDemoteUser(PromoteOrDemoteUserRequest) returns (google.protobuf.Empty);
}


message TableUser{
  uint64 table_id = 1;
  uint64 user_id = 2;
  Role role = 3;
}

enum Role{
  UNSPECIFIED = 0;
  PLAYER = 1;
  MASTER = 2;
}

message PromoteOrDemoteUserRequest{
  uint64 table_id = 1;
  uint64 user_id = 2;
  Role role = 3;
}


message PromotedOrDemotedUserEvent{
 TableUser tableUser = 1;
}
